fix odd border gap on draggable elements

--- a/components/Window/Window.module.scss
+++ b/components/Window/Window.module.scss
@@ -5,6 +5,7 @@
 .window {
   position: fixed;
   border: 2px solid colours.$cornflower;
+  background: colours.$cornflower;
   font-size: 16px;
   display: flex;
   flex-direction: column;
